# scrp

./: .env.example  .env.production  .gitignore  SETUP.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
backend/db/: database.py  models.py
backend/extractors/: contact_page_finder.py  email_extractor.py  phone_extractor.py  social_extractor.py
backend/repositories/: base.py  business_repo.py  enrichment_repo.py  project_repo.py
backend/routers/: businesses.py  enrichment.py  export.py  projects.py  search.py  settings.py
backend/schemas/: base.py  business.py  enrichment.py  export.py  project.py
backend/services/: enrichment_service.py  export_service.py  overpass_service.py  scraper_service.py  settings_service.py
backend/tests/: conftest.py  test_e2e.py
backend/tests/fixtures/sample_html/: business_page.html
backend/tests/test_extractors/: test_contact_page_finder.py  test_email_extractor.py  test_phone_extractor.py  test_social_extractor.py
backend/tests/test_repositories/: test_business_repo.py  test_enrichment_repo.py  test_project_repo.py
backend/tests/test_routers/: test_businesses.py  test_enrichment.py  test_export.py  test_projects.py  test_search.py  test_settings.py
backend/tests/test_services/: test_enrichment_service.py  test_export_service.py  test_overpass_service.py  test_scraper_service.py
scripts/: build-sidecar.sh  dev.sh  test-all.sh
src/: App.tsx  index.css  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+49 files in other folders)
